@@ -15,6 +15,8 @@ Numerics
 Default option changes
 ----------------------
 
+- Make coupled solving for DRSM turbulence models default option.
+
 - Make prediction of mass fluxes before momentum solving optionnal. This
   impact variable density algorithm (idilat>=2).
 
